[package]
name = "mineore-cli"
version = "2.3.0"
edition = "2021"
license = "Apache-2.0"
description = "A command line interface for ORE cryptocurrency mining. Modified to use with MineORE.app"
documentation = "https://mineore.app"
homepage = "https://mineore.app"
repository = "https://github.com/mineore/mineore-cli"
readme = "./README.md"
keywords = ["solana", "crypto", "mining", "mineore"]

[[bin]]
name = "mineore"
path = "src/main.rs"

[features]
default = []
admin = []

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
cached = "0.46.1"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.0"
core_affinity = "0.8.1"
drillx = "2.0.0"
num_cpus = "1.16.0"
ore-api = "2.1.0"
ore-utils = "2.1.0"
rand = "0.8.4"
solana-cli-config = "^1.18"
solana-client = "^1.18"
solana-program = "^1.18"
solana-rpc-client = "^1.18"
solana-sdk = "^1.18"
spl-associated-token-account = { version = "^2.3", features = [
  "no-entrypoint",
] }
tokio = "1.35.1"
serde = { version = "1.0", features = ["derive"] }

#[patch.crates-io]
# drillx = { path = "./drillx/drillx" }
# ore-api = { path = "../ore/api" }
# ore-utils = { path = "../ore/utils" }
